--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -24,8 +24,8 @@ jobs:
 
     - name: Build
       run: |
-        git config --global user.name "Grunt Script Deploy"
-        git config --global user.email "sandychad@outlook.com"
+        git config --global user.name "sandychad"
+        git config --global user.password "m3an1ng0flyfe*"
         npm install
         npm run build
         npm run deploy
