--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -29,7 +29,8 @@ jobs:
 
     - name: Install and Build
       run: |
-        npm ci
+        npm clean
+        npm install
         npm run build
     
     - name: Deploy 🚀
