--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -29,8 +29,7 @@ jobs:
 
     - name: Install and Build
       run: |
-        npm clean
-        npm install
+        npm ci
         npm run build
     
     - name: Deploy 🚀
